# semantic-similarity-cli

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
